--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,31 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "2022届校招"
+excerpt: "微信/钉钉扫码查看详情 <br/><img src='/images/社招二维码.png' width = '200'/>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+**基础信息**
+-毕业时间要求: 2021-11-01~2022-10-31
+-面试地点: 远程
+-职位方向: 计算机视觉
+-工作地点: 杭州市/北京市/深圳市
+
+**职位描述**
+阿里巴巴集团拥有海量的图像/视频数据，强大的计算能力和巨大的市场空间。我们需要你具有计算机视觉相关基础知识和视觉分析、诊断、搜索、合成等方面的实践经验。我们期待聪明、乐观、皮实、自省、追求卓越和自我驱动的优秀人士加入阿里巴巴，共同开创视觉技术的新格局。 
+具体职责包括但不限于： 
++ 负责图像/视频的分析、诊断、搜索、合成等方面的算法研究、系统研发和产品开发，包括图像检测、图像分类、图像分割、图像跟踪、视频语义分析、人脸识别与分析、车辆与人员的检测识别与跟踪、工业与医学诊断、图像/视频搜索、页面分析与自动合成、OCR等；
++ 负责图像/视频相关算法的前沿技术探索，包括机器学习方法以及深度学习在机器视觉中的应用，以及计算机视觉与自然语言处理、计算机图形学等相关领域的联合创新。
+
+**职位要求**
++ 本科及以上学历，硕士博士优先，计算机、数学、通信、自动化等相关专业；
++ 极佳的工程实现能力，熟练掌握C/C++、Java、Python等至少一门语言 ，ACM/ICPC、topcoder等编程比赛获奖者优先；
++ 良好的科研能力，有成果发表在ICCV、CVPR、NeurIPS、ICML、TPAMI等国际顶级会议、期刊者优先 ；
++ 良好的逻辑和数据分析能力，Kaggle、阿里天池大赛、以及相关学术会议组织的权威比赛获奖者优先；
++ 熟悉计算机视觉、机器学习、图像/视频分析与处理等相关领域技术和应用，有大量实践经验者优先。
+
+同时，我们还希望你：
++ 学习能力强，对新事物保有好奇心，并能快速适应新环境 
++ 良好的沟通能力和团队协同能力；能与他人合作，共同完成目标 
++ 对所在领域有热情，相信方法总比困难多，善于独立思考并反思总结
+
+*职位链接*: [2022届校招-视觉算法](https://talent.alibaba.com/campus-position/12686?spm=a1z9iw.13825115.0.0.60663ae77Gy9Gu "算法工程师-计算机视觉") 
