--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "2022届校招"
-excerpt: "微信/钉钉扫码查看详情 <br/><img src='/images/社招二维码.png' width = '200'/>"
+excerpt: "城市大脑实验室欢迎优秀应届生加入 <br/><img src='/images/2022校招海报.jpg' width = '200'/>"
 collection: portfolio
 ---
 
